--- a/views/partials/frontend/account.hbs
+++ b/views/partials/frontend/account.hbs
@@ -10,11 +10,20 @@
                         <p>
                             Tên tài khoản
                         </p>
-                        <input disabled id="accountName" type="email" placeholder="Tên tài khoản">
+                        <input id="accountEmail" type="email">
                         <p>
-                            Email
+                            Name
                         </p>
-                        <input disabled id="accountEmail" type="text" placeholder="Email">
+                        <input id="accountName" type="text">
+                        <p>
+                            Phone
+                        </p>
+                        <input id="accountPhone" type="text">
+                        <p>
+                            Address
+                        </p>
+                        <input id="accountAddress" type="text">
+                        <button type="button" id="buttonEditInforUser">Lưu lại</button>
                     </form>
                 </div>
                 <!--/login form-->
