--- a/views/partials/frontend/login.hbs
+++ b/views/partials/frontend/login.hbs
@@ -26,8 +26,10 @@
 					<!--sign up form-->
 					<h2>Đăng ký người dùng mới!</h2>
 					<form id="registerUserForm" action="#">
-						<input id="registerName" type="text" placeholder="Tên">
 						<input id="registerEmail" type="email" placeholder="Địa chỉ email">
+						<input id="registerName" type="text" placeholder="Tên">		
+						<input id="registerPhone" type="text" placeholder="Số Điện Thoại">
+						<input id="registerAddress" type="text" placeholder="Địa Chỉ">				
 						<input id="registerPass" type="password" placeholder="Mật khẩu">
 						<button type="submit" class="btn btn-default">Đăng ký</button>
 					</form>
