--- a/views/partials/frontend/product.hbs
+++ b/views/partials/frontend/product.hbs
@@ -136,12 +136,12 @@
 				<div class="col-sm-9 padding-right">
 					<div class="features_items"><!--features_items-->
 						<h2 class="title text-center">Các sản phẩm</h2>
-						   {{#each data}}
+						{{#each data}}
 						<div class="col-sm-4">
 							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
-										<img src="/img/upload/{{image}}" alt="" />
+										<img src="/img/upload/{{image}}" alt="" width="260" height="300"/>
 										<h2>{{price}} VND</h2>
 										<p>{{name}}</p>
 										<a href="/product/detail/{{id}}" class="btn btn-default add-to-cart"><i class="fa fa-search"></i>Xem chi tiết</a>
@@ -153,8 +153,7 @@
 											<a href="/product/detail/{{id}}" class="btn btn-default add-to-cart"><i class="fa fa-search"></i>Xem chi tiết</a>
 										</div>
 									</div>
-								</div>
-							
+								</div>						
 							</div>
 						</div>
 						{{/each}}
