--- a/views/admin/products/edit.hbs
+++ b/views/admin/products/edit.hbs
@@ -4,43 +4,60 @@
             <div class="col-sm-11">
                 <h6 class="m-0 font-weight-bold text-primary">Edit Product</h6>
             </div>
-            {{!-- <div class="col-sm-1">
-                <a style="font-size: 12px;" class="btn btn-info" href="/admin/product/create">Create Product</a>
-            </div> --}}
         </div>
     </div>
     <div class="card-body">
         <div style="overflow: hidden;" class="table-responsive">
             <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                <form  action="./{{id}}" method="post">
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Id</label>
+                        <input type="text" disabled class="form-control" id="exampleInputId" aria-describedby="emailHelp"
+                            name="name" value="{{id}}">
+                    </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Name</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                            placeholder="Enter email" name="name" value="{{name}}">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                            else.</small>
+                        <input type="text" class="form-control" id="exampleInputName" aria-describedby="emailHelp"
+                            name="name" value="{{name}}">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Quanlity</label>
-                        <input type="quanlity" class="form-control" id="exampleInputPassword1" placeholder="Password" name="quanlity" value="{{quanlity}}">
+                        <input type="quanlity" class="form-control" id="exampleInputQuanlity" name="quanlity" value="{{quanlity}}">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Size</label>
-                        <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Password" name="size" value="{{size}}">
+                        <input type="number" class="form-control" id="exampleInputSize" name="size" value="{{size}}">
                     </div>
                       <div class="form-group">
                         <label for="exampleInputPassword1">Price</label>
-                        <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Password" name="price" value="{{price}}">
+                        <input type="number" class="form-control" id="exampleInputPrice" name="price" value="{{price}}">
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Category</label>                 
+                        <select name="category" id="categorySelected" class="form-select" aria-label="Default select example">
+                            <option selected value="{{idCate}}">{{nameCate}}</option>
+                            {{#each dataCategory}}
+                            <option value="{{id}}">{{name}}</option>
+                            {{/each}}
+                        </select>
+
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlFile1">Image</label>
-                        <input type="file" id="exampleFormControlFile1" name="image" value="{{this.image}}">
-                        <img style="width: 200px;" src="/img/upload/{{image}}" class="preview"/>
-                    </div>
-                      
-                    <button type="submit" class="btn btn-primary"  value="Update">Submit</button>
+                        <label for="exampleInputPassword1">TradeMark</label>
+                        <select name="category" id="trademarkSelected" class="form-select" aria-label="Default select example">
+                            <option selected value="{{idTrade}}">{{nameTrade}}</option>
+                            {{#each dataTrademark}}
+                            <option value="{{id}}">{{name}}</option>
+                            {{/each}}
+                        </select>
+                    </div>                   
+                    <button type="button" class="btn btn-primary" id="editProductAdmin"  value="Update">Update</button>
                 </form>
             </div>
         </div>
     </div>
 </div>
+
+<script src="/admin/js/product.js"></script>
