--- a/views/partials/admin/login.hbs
+++ b/views/partials/admin/login.hbs
@@ -41,7 +41,7 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Đăng nhập</h1>
                                     </div>
-                                    <form id="loginAdminForm" class="user">
+                                    <form class="user" action="#">
                                         <div class="form-group">
                                             <input type="email" class="form-control form-control-user"
                                                 id="loginInputEmail" aria-describedby="emailHelp"
@@ -58,13 +58,13 @@
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <button type="submit" class="btn btn-primary btn-user btn-block">
+                                        <button type="button" id="login_Admin" class="btn btn-primary btn-user btn-block">
                                             Đăng nhập
                                         </button>
                                         <hr>
                                     </form>
                                     <div class="text-center">
-                                        <a class="small" href="register.html">Tạo tài khoản!</a>
+                                        <a class="small" href="/admin/register">Tạo tài khoản!</a>
                                     </div>
                                 </div>
                             </div>
@@ -87,9 +87,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
-    <script src="js/auth.js">
-
-    </script>
+    <script src="/admin/js/auth.js"></script>
 
 </body>
 
