--- a/views/partials/frontend/product-detail.hbs
+++ b/views/partials/frontend/product-detail.hbs
@@ -27,8 +27,6 @@
   <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 </head>
 <!--/head-->
-
-    {{> header }}
     <section>
 		<div class="container">
 			<div class="row">
@@ -201,23 +199,24 @@
 						<div class="col-sm-7">
 								{{!-- {{#each data}} --}}
 							<div class="product-information"><!--/product-information-->
-								<img src="img/upload/{{image}}" class="newarrival" alt="">
+								{{!-- <img src="img/upload/{{image}}" class="newarrival" alt=""> --}}
 								<h2>{{name}}</h2>
 								{{!-- <p>Web ID: 1089772</p> --}}
-								<img src="img/upload/{{image}}" alt="">
+								{{!-- <img src="img/upload/{{image}}" alt=""> --}}
 								<span>
 									<span>{{price}} VND</span>
 									<label>Số lượng:</label>
-									<input type="text" value="{{price}}">
-									<button type="button" class="btn btn-fefault cart">
+									<input type="text" value="{{quanlity}}">
+									<button type="button" class="btn btn-fefault cart" id="button_add_cart">
 										<i class="fa fa-shopping-cart"></i>
 										Thêm vào giỏ hàng
 									</button>
 								</span>
+
 								{{!-- <p><b>Trạng thái:</b> Trong kho</p>
 								<p><b>Tình trạng:</b> Mới</p>
 								<p><b>Thương hiệu:</b> E-SHOPPER</p> --}}
-								<a href=""><img src="img/upload/{{image}}" class="share img-responsive" alt=""></a>
+								{{!-- <a href=""><img src="img/upload/{{image}}" class="share img-responsive" alt=""></a> --}}
 							</div><!--/product-information-->
 						</div>
 						{{!-- {{/each}} --}}
@@ -418,81 +417,39 @@
 						
 						<div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
 							<div class="carousel-inner">
-								<div class="item">	
-									<div class="col-sm-4">
-										<div class="product-image-wrapper">
-											<div class="single-products">
-												<div class="productinfo text-center">
-													<img src="images/home/recommend1.jpg" alt="">
-													<h2>1.000.000 VND</h2>
-													<p>Easy Polo Black Edition</p>
-													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="col-sm-4">
-										<div class="product-image-wrapper">
-											<div class="single-products">
-												<div class="productinfo text-center">
-													<img src="images/home/recommend2.jpg" alt="">
-													<h2>1.000.000 VND</h2>
-													<p>Easy Polo Black Edition</p>
-													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="col-sm-4">
-										<div class="product-image-wrapper">
-											<div class="single-products">
-												<div class="productinfo text-center">
-													<img src="images/home/recommend3.jpg" alt="">
-													<h2>1.000.000 VND</h2>
-													<p>Easy Polo Black Edition</p>
-													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
 								<div class="item active">	
+									{{#each dataRe}}
 									<div class="col-sm-4">
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/home/recommend1.jpg" alt="">
-													<h2>1.000.000 VND</h2>
-													<p>Easy Polo Black Edition</p>
-													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
+													<img src="/img/upload/{{image}}" alt="" width="255.48" height="255.48"/>
+													<h2>${{price}}</h2>
+													<p>{{name}}</p>
+													<a href="/product/detail/{{id}}" class="btn btn-default add-to-cart"><i
+															class="fa fa-shopping-cart"></i>Xem Chi Tiết</a>
 												</div>
 											</div>
 										</div>
 									</div>
+									{{/each}}
+								</div>
+								<div class="item">	
+									{{#each dataRe2}}
 									<div class="col-sm-4">
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/home/recommend2.jpg" alt="">
-													<h2>1.000.000 VND</h2>
-													<p>Easy Polo Black Edition</p>
-													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
+													<img src="/img/upload/{{image}}" alt="" width="255.48" height="255.48"/>
+													<h2>${{price}}</h2>
+													<p>{{name}}</p>
+													<a href="/product/detail/{{id}}" class="btn btn-default add-to-cart"><i
+															class="fa fa-shopping-cart"></i>Xem Chi Tiết</a>
 												</div>
 											</div>
 										</div>
 									</div>
-									<div class="col-sm-4">
-										<div class="product-image-wrapper">
-											<div class="single-products">
-												<div class="productinfo text-center">
-													<img src="images/home/recommend3.jpg" alt="">
-													<h2>1.000.000 VND</h2>
-													<p>Easy Polo Black Edition</p>
-													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
-												</div>
-											</div>
-										</div>
-									</div>
+									{{/each}}
 								</div>
 							</div>
 							 <a class="left recommended-item-control" href="#recommended-item-carousel" data-slide="prev">
@@ -508,12 +465,12 @@
 			</div>
 		</div>
 	</section>
-    {{>footer}}
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.js"></scrip>
+<script src="js/bootstrap.min.js"></scrip>
 <script src="js/jquery.scrollUp.min.js"></script>
 <script src="js/price-range.js"></script>
 <script src="js/jquery.prettyPhoto.js"></script>
 <script src="js/main.js"></script>
+<script src="js/cart/quantily.js"></script>
 
 </html>
