--- a/views/admin/client/client.hbs
+++ b/views/admin/client/client.hbs
@@ -4,9 +4,9 @@
             <div class="col-sm-11">
                 <h6 class="m-0 font-weight-bold text-primary">List Product</h6>
             </div>
-            <div class="col-sm-1">
+            {{!-- <div class="col-sm-1">
                 <a style="font-size: 12px;" class="btn btn-info" href="/admin/product/create">Create Product</a>
-            </div>
+            </div> --}}
         </div>
     </div>
     <div class="card-body">
