--- a/views/admin/products/index.hbs
+++ b/views/admin/products/index.hbs
@@ -21,7 +21,7 @@
                                     <th class="sorting sorting_asc" tabindex="0" aria-controls="dataTable" rowspan="1"
                                         colspan="1" aria-sort="ascending"
                                         aria-label="Name: activate to sort column descending" style="width: 261.812px;">
-                                        #</th>
+                                        Id</th>
                                     <th class="sorting sorting_asc" tabindex="0" aria-controls="dataTable" rowspan="1"
                                         colspan="1" aria-sort="ascending"
                                         aria-label="Name: activate to sort column descending" style="width: 261.812px;">
@@ -34,6 +34,9 @@
                                     <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1"
                                         aria-label="Age: activate to sort column ascending" style="width: 100.453px;">
                                         Size</th>
+                                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1"
+                                        aria-label="Age: activate to sort column ascending" style="width: 194.359px;">
+                                        Price</th>
                                     <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1"
                                         aria-label="Age: activate to sort column ascending" style="width: 194.359px;">
                                         Price</th>
@@ -53,7 +56,7 @@
                                     <td>{{quanlity}}</td>
                                     <td>{{size}}</td>
                                     <td>{{price}} VNĐ</td>
-
+                                    <td>{{created}} VNĐ</td>
                                     <td>
                                         <a class="btn btn-success edit" href="/admin/product/edit/{{id}}">Edit</a>
                                         <a class="btn btn-danger delete" onclick="return confirm('Are You sure?')"
