--- a/views/admin/products/create.hbs
+++ b/views/admin/products/create.hbs
@@ -4,15 +4,15 @@
             <div class="col-sm-11">
                 <h6 class="m-0 font-weight-bold text-primary">List Product</h6>
             </div>
-            <div class="col-sm-1">
+            {{!-- <div class="col-sm-1">
                 <a style="font-size: 12px;" class="btn btn-info" href="/admin/product/create">Create Product</a>
-            </div>
+            </div> --}}
         </div>
     </div>
     <div class="card-body">
         <div style="overflow: hidden;" class="table-responsive">
             <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                <form action="./create" method="post" id="createForm" enctype="multipart/form-data">
+                <form action="/admin/product/create" method="post" id="createForm" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Name products</label>
                         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
@@ -37,24 +37,23 @@
                     <div class="form-group">
                         <label for="exampleInputPassword1">Category</label>
                         
-                        <select name="category" id="dataCategory" class="form-select" aria-label="Default select example">
-                            <option selected>Open this select menu</option>
-                            {{#with dataCategory}}
+                        <select name="category" id="dataCate" class="form-select" aria-label="Default select example">
+                            {{#each dataCate}}
                             <option value="{{id}}">{{name}}</option>
-                            {{/with}}
+                            {{/each}}
                         </select>
-                        {{!-- <input type="number" class="form-control" id="exampleInputCategory" 
-                            name="category" value="{{id}}"> --}}
                     </div>
-                    <div class="form-group">
+                    <div class="form-group">    
                         <label for="exampleInputPassword1">TradeMark</label>
-                        {{!-- <input type="number" class="form-control" id="exampleInputTrademark" 
-                            name="trademark" value="{{id}}"> --}}
+                        <select name="trademark" id="dataTrade" class="form-select" aria-label="Default select example">
+                            {{#each dataTrade}}
+                            <option value="{{id}}">{{name}}</option>
+                            {{/each}}
+
+                        </select>
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlFile1">Image</label>
-                        {{!-- <input type="file" class="form-control-file" id="exampleFormControlFile1" name="image"
-                            value="{{image}}" accept="image/*"> --}}
                         <input type="file" name="image" accept="image/*" />
                         <img style="width: 200px;" src="" class="preview" />
                     </div>
@@ -76,3 +75,4 @@
         }
     })
 </script>
+
