--- a/views/admin/products/edit.hbs
+++ b/views/admin/products/edit.hbs
@@ -37,7 +37,6 @@
                     <div class="form-group">
                         <label for="exampleInputPassword1">Category</label>                 
                         <select name="category" id="categorySelected" class="form-select" aria-label="Default select example">
-                            <option selected value="{{idCate}}">{{nameCate}}</option>
                             {{#each dataCategory}}
                             <option value="{{id}}">{{name}}</option>
                             {{/each}}
@@ -46,13 +45,25 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">TradeMark</label>
-                        <select name="category" id="trademarkSelected" class="form-select" aria-label="Default select example">
-                            <option selected value="{{idTrade}}">{{nameTrade}}</option>
+                        <select name="trademark" id="trademarkSelected" class="form-select" aria-label="Default select example">
                             {{#each dataTrademark}}
                             <option value="{{id}}">{{name}}</option>
                             {{/each}}
                         </select>
-                    </div>                   
+                    </div>  
+
+                    {{!-- <div class="form-group">
+                        <label for="exampleFormControlFile1">Old Image</label>
+                        <input type="file" name="imageOld" accept="image/*" />
+                        <img style="width: 200px;" src="/img/upload/{{image}}" />
+                    </div>
+
+                    <div class="form-group">
+                        <label for="exampleFormControlFile1">New Image</label>
+                        <input type="file" name="imageNew" accept="image/*" />
+                        <img style="width: 200px;" src="" class="preview" />
+                    </div> --}}
+
                     <button type="button" class="btn btn-primary" id="editProductAdmin"  value="Update">Update</button>
                 </form>
             </div>
